--- a/Health/app/src/main/res/layout/fragment_food_menu.xml
+++ b/Health/app/src/main/res/layout/fragment_food_menu.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:text="Создать меню"
+        android:text="@string/createMenu"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textAllCaps="false"
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Ваши\nменю"
+            android:text="@string/yourMenus"
             android:textSize="15sp"
             android:textColor="@color/blue"
             android:textAllCaps="false"
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Рекомендуемые\nменю"
+            android:text="@string/recommendedMenus"
             android:textSize="15sp"
             android:textColor="@color/blue"
             android:textAllCaps="false"
@@ -84,7 +84,7 @@
             android:paddingBottom="5dp"
             android:drawableTop="@drawable/ic_date"
             android:tint="@color/white"
-            android:text="Контроль"
+            android:text="@string/nutritionControl_fm"
             android:textSize="12sp"
             android:textColor="@color/white"
             android:background="@color/blue"
@@ -98,7 +98,7 @@
             android:paddingBottom="5dp"
             android:drawableTop="@drawable/ic_restaurant_menu"
             android:tint="@color/white"
-            android:text="Меню"
+            android:text="@string/foodMenu_fm"
             android:textSize="12sp"
             android:textColor="@color/white"
             android:background="@color/blueDarkDark"
@@ -113,7 +113,7 @@
             android:paddingBottom="5dp"
             android:drawableTop="@drawable/ic_calc"
             android:tint="@color/white"
-            android:text="Калькулятор"
+            android:text="@string/calorieCalculator_fm"
             android:textSize="12sp"
             android:textColor="@color/white"
             android:background="@color/blue"
