--- a/Health/app/src/main/res/layout/fragment_food_menu_items.xml
+++ b/Health/app/src/main/res/layout/fragment_food_menu_items.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:text="Понедельник"
+        android:text="@string/dayOfWeek_fmp"
         android:textColor="@color/blueDarkDark"
         android:textSize="30sp"
         android:gravity="center"
@@ -37,8 +37,8 @@
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:textOn="Завтрак"
-            android:textOff="Завтрак"
+            android:textOn="@string/breakfast_fmp"
+            android:textOff="@string/breakfast_fmp"
             android:textColor="@color/white"
             android:textSize="17sp"
             android:textAllCaps="false"
@@ -52,8 +52,8 @@
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:textOn="Обед"
-            android:textOff="Обед"
+            android:textOn="@string/lunch_fmp"
+            android:textOff="@string/lunch_fmp"
             android:textColor="@color/white"
             android:textSize="17sp"
             android:textAllCaps="false"
@@ -67,8 +67,8 @@
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:textOn="Ужин"
-            android:textOff="Ужин"
+            android:textOn="@string/dinner_fmp"
+            android:textOff="@string/dinner_fmp"
             android:textColor="@color/white"
             android:textSize="17sp"
             android:textAllCaps="false"
@@ -91,7 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="Белки, г"
+            android:text="@string/protein_fmp"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -101,7 +101,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="Жиры, г"
+            android:text="@string/fat_fmp"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -113,7 +113,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="0"
+            android:text="@string/valueProtein_fmp"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:gravity="center" />
@@ -123,7 +123,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="0"
+            android:text="@string/valueFat_fmp"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:gravity="center" />
@@ -132,7 +132,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="Углеводы, г"
+            android:text="@string/carbohydrate_fmp"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -142,7 +142,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="кКал"
+            android:text="@string/calories_fmp"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -153,7 +153,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="0"
+            android:text="@string/valueCarbohydrate_fmp"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:gravity="center" />
@@ -163,7 +163,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="0"
+            android:text="@string/valueCalories_fmp"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:gravity="center" />
@@ -185,7 +185,7 @@
             app:layout_columnWeight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Вес порции в граммах:"
+            android:text="@string/weightProduct_fmp"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:gravity="center" />
@@ -199,14 +199,14 @@
             android:inputType="number"
             android:minEms="3"
             android:maxEms="3"
-            android:hint="100г" />
+            android:hint="@string/_100g_fmp" />
 
         <AutoCompleteTextView
             android:id="@+id/actv_addProduct_fmp"
             app:layout_columnSpan="2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Введите блюдо"
+            android:hint="@string/addProduct_fmp"
             android:textColor="@color/blueDarkDark"
             android:textSize="20sp"
             android:inputType="textVisiblePassword"
@@ -224,7 +224,7 @@
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:background="@drawable/background_button_water"
-            android:text="Добавить"
+            android:text="@string/btn_addProduct_fmp"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="15sp"
