--- a/Health/app/src/main/res/layout/fragment_nutrition_control.xml
+++ b/Health/app/src/main/res/layout/fragment_nutrition_control.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:text="Добавить день"
+        android:text="@string/addDay_NutCont"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textAllCaps="false"
@@ -42,7 +42,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:text="Статистика"
+        android:text="@string/statisticsNutCont"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textAllCaps="false"
@@ -63,7 +63,7 @@
             android:paddingBottom="5dp"
             android:drawableTop="@drawable/ic_date"
             android:tint="@color/white"
-            android:text="Контроль"
+            android:text="@string/control_nutrControl"
             android:textSize="12sp"
             android:textColor="@color/white"
             android:background="@color/blueDarkDark"
@@ -78,7 +78,7 @@
             android:paddingBottom="5dp"
             android:drawableTop="@drawable/ic_restaurant_menu"
             android:tint="@color/white"
-            android:text="Меню"
+            android:text="@string/foodMenu_NutCont"
             android:textSize="12sp"
             android:textColor="@color/white"
             android:background="@color/blue"
@@ -93,7 +93,7 @@
             android:paddingBottom="5dp"
             android:drawableTop="@drawable/ic_calc"
             android:tint="@color/white"
-            android:text="Калькулятор"
+            android:text="@string/calorieCalculator_NutCont"
             android:textSize="12sp"
             android:textColor="@color/white"
             android:background="@color/blue"
