--- a/Health/app/src/main/res/layout/fragment_sleep.xml
+++ b/Health/app/src/main/res/layout/fragment_sleep.xml
@@ -23,7 +23,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Время сна"
+                android:text="@string/timeSleep"
                 android:textColor="@color/blueDarkDark"
                 android:textSize="35sp"
                 android:gravity="center"/>
@@ -32,7 +32,7 @@
                 android:id="@+id/tv_duringSleep"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="9:46"
+                android:text="@string/duringSleep"
                 android:textColor="@color/blueDarkDark"
                 android:textSize="60sp"
                 android:textStyle="bold"
@@ -57,7 +57,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_gravity="center"
-                android:text="Укажите:"
+                android:text="@string/indicate"
                 android:textColor="@color/blueDarkDark"
                 android:textSize="25sp"
                 android:gravity="left"/>
@@ -71,7 +71,7 @@
                 android:layout_marginBottom="15dp"
                 android:padding="5dp"
                 android:layout_gravity="center"
-                android:text="Время засыпания"
+                android:text="@string/fallingAsleep"
                 android:textColor="@color/blueDarkDark"
                 android:textSize="25sp"
                 android:background="@drawable/background_textview_sleep"
@@ -86,7 +86,7 @@
                 android:layout_marginBottom="15dp"
                 android:padding="5dp"
                 android:layout_gravity="center"
-                android:text="Время пробуждения"
+                android:text="@string/wakingUp"
                 android:textColor="@color/blueDarkDark"
                 android:textSize="25sp"
                 android:background="@drawable/background_textview_sleep"
@@ -102,7 +102,7 @@
                 android:layout_gravity="center"
                 android:paddingStart="15dp"
                 android:paddingEnd="15dp"
-                android:text="Сохранить"
+                android:text="@string/saveTimeSleep"
                 android:textSize="25sp"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
@@ -117,7 +117,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="15dp"
-            android:text="Дата"
+            android:text="@string/dateRecordsSleep"
             android:textSize="25sp"
             android:textAllCaps="false"
             android:textColor="@color/white"
@@ -130,7 +130,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="15dp"
-            android:text="Статистика"
+            android:text="@string/statisticsSleepFragment"
             android:textSize="25sp"
             android:textAllCaps="false"
             android:textColor="@color/white"
@@ -142,7 +142,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:text="Рекомендации"
+            android:text="@string/recommendationsSleep"
             android:textSize="25sp"
             android:textAllCaps="false"
             android:textColor="@color/white"
