--- a/Health/app/src/main/res/layout/activity_adding_day_menu.xml
+++ b/Health/app/src/main/res/layout/activity_adding_day_menu.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:text="01.01.0101"
+        android:text="@string/date"
         android:textColor="@color/blueDarkDark"
         android:textSize="30sp"
         android:gravity="center"
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="Белки, г"
+            android:text="@string/protein_g"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="Жиры, г"
+            android:text="@string/fat_g"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="0"
+            android:text="@string/zero"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:gravity="center" />
@@ -68,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="0"
+            android:text="@string/zero"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:gravity="center" />
@@ -77,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="Углеводы, г"
+            android:text="@string/carbohydrate_g"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -87,7 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="кКал"
+            android:text="@string/calories"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -98,7 +98,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="0"
+            android:text="@string/zero"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:gravity="center" />
@@ -108,7 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_columnWeight="1"
-            android:text="0"
+            android:text="@string/zero"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:gravity="center" />
@@ -130,7 +130,7 @@
             app:layout_columnWeight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Вес порции в граммах:"
+            android:text="@string/weightProduct"
             android:textColor="@color/blueDarkDark"
             android:textSize="17sp"
             android:gravity="center" />
@@ -144,14 +144,14 @@
             android:inputType="number"
             android:minEms="3"
             android:maxEms="3"
-            android:hint="100г" />
+            android:hint="@string/_100g" />
 
         <AutoCompleteTextView
             android:id="@+id/actv_addProduct_adm"
             app:layout_columnSpan="2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Введите блюдо"
+            android:hint="@string/enterProduct"
             android:textColor="@color/blueDarkDark"
             android:textSize="20sp"
             android:inputType="textVisiblePassword"
@@ -170,7 +170,7 @@
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:background="@drawable/background_button_water"
-            android:text="Добавить"
+            android:text="@string/add"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="15sp"
