--- a/Health/app/src/main/res/layout/activity_home.xml
+++ b/Health/app/src/main/res/layout/activity_home.xml
@@ -42,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:text="Здоровье"
+                android:text="@string/health"
                 android:textColor="@color/white"
                 android:textSize="23sp" />
 
