--- a/Health/app/src/main/res/layout/activity_recommendation_sleep.xml
+++ b/Health/app/src/main/res/layout/activity_recommendation_sleep.xml
@@ -21,7 +21,7 @@
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:toolbarId="@+id/toolBarSleep">
+            app:toolbarId="@+id/toolBarRecomSleep">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolBarRecomSleep"
