--- a/Health/app/src/main/res/layout/activity_sleep_statistics.xml
+++ b/Health/app/src/main/res/layout/activity_sleep_statistics.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:text="Статистика"
+                android:text="@string/statisticsSleep"
                 android:textColor="@color/white"
                 android:textSize="23sp"/>
 
@@ -56,8 +56,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textOn="Год"
-                android:textOff="Год"
+                android:textOn="@string/yearSleepStat"
+                android:textOff="@string/yearSleepStat"
                 android:textColor="@color/white"
                 android:background="@drawable/background_button_statistic_sleep1"
                 android:textSize="20sp"
@@ -69,8 +69,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textOn="Месяц"
-                android:textOff="Месяц"
+                android:textOn="@string/monthSleepStat"
+                android:textOff="@string/monthSleepStat"
                 android:textColor="@color/white"
                 android:background="@drawable/background_button_statistic_sleep2"
                 android:textSize="20sp"
@@ -82,8 +82,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textOn="Неделя"
-                android:textOff="Неделя"
+                android:textOn="@string/weekSleepStat"
+                android:textOff="@string/weekSleepStat"
                 android:textColor="@color/white"
                 android:background="@drawable/background_button_statistic_sleep3"
                 android:textSize="20sp"
@@ -119,7 +119,7 @@
                 android:layout_weight="5"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="10-17 марта 2020"
+                android:text="@string/diapasonSleepStat"
                 android:textSize="20sp"
                 android:textColor="@color/blueDarkDark"
                 android:textAllCaps="false"/>
@@ -153,7 +153,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="17 марта"
+                android:text="@string/dateSleepStat"
                 android:textSize="20sp"
                 android:textColor="@color/blueDarkDark"/>
 
@@ -163,7 +163,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="1234 мл"
+                android:text="@string/valueSleepStat"
                 android:textSize="35sp"
                 android:textColor="@color/blueDarkDark"/>
 
@@ -198,7 +198,7 @@
                 app:layout_columnWeight="1"
                 app:layout_gravity="center"
                 android:gravity="center"
-                android:text="Всего"
+                android:text="@string/totalSleepStat"
                 android:textSize="20sp"
                 android:textColor="@color/blueDarkDark" />
 
@@ -208,7 +208,7 @@
                 app:layout_columnWeight="1"
                 app:layout_gravity="center"
                 android:gravity="center"
-                android:text="Среднее"
+                android:text="@string/averageSleepStat"
                 android:textSize="20sp"
                 android:textColor="@color/blueDarkDark"/>
 
@@ -218,7 +218,7 @@
                 android:layout_height="wrap_content"
                 app:layout_gravity="center"
                 android:gravity="center"
-                android:text="20 000"
+                android:text="@string/_20_000SleepStat"
                 android:textSize="35sp"
                 android:textColor="@color/blueDarkDark"/>
 
@@ -228,7 +228,7 @@
                 android:layout_height="wrap_content"
                 app:layout_gravity="center"
                 android:gravity="center"
-                android:text="1950"
+                android:text="@string/_1950SleepStat"
                 android:textSize="35sp"
                 android:textColor="@color/blueDarkDark"/>
 
@@ -239,7 +239,7 @@
                 app:layout_columnWeight="1"
                 app:layout_gravity="center"
                 android:gravity="center"
-                android:text="Среднее время\nзасыпания"
+                android:text="@string/averageFallingAsleep"
                 android:textSize="20sp"
                 android:textColor="@color/blueDarkDark" />
 
@@ -250,7 +250,7 @@
                 app:layout_columnWeight="1"
                 app:layout_gravity="center"
                 android:gravity="center"
-                android:text="Среднее время\nпробуждения"
+                android:text="@string/averageWakingUp"
                 android:textSize="20sp"
                 android:textColor="@color/blueDarkDark"/>
 
@@ -260,7 +260,7 @@
                 android:layout_height="wrap_content"
                 app:layout_gravity="center"
                 android:gravity="center"
-                android:text="20 000"
+                android:text="@string/_20_000SleepStat"
                 android:textSize="35sp"
                 android:textColor="@color/blueDarkDark"/>
 
@@ -270,7 +270,7 @@
                 android:layout_height="wrap_content"
                 app:layout_gravity="center"
                 android:gravity="center"
-                android:text="1950"
+                android:text="@string/_1950SleepStat"
                 android:textSize="35sp"
                 android:textColor="@color/blueDarkDark"/>
 
