--- a/Health/app/src/main/res/layout/activity_weight_statistics.xml
+++ b/Health/app/src/main/res/layout/activity_weight_statistics.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:text="Статистика"
+            android:text="@string/weightStatistics"
             android:textColor="@color/white"
             android:textSize="23sp"/>
 
