--- a/Health/app/src/main/res/layout/fragment_calorie_calculator.xml
+++ b/Health/app/src/main/res/layout/fragment_calorie_calculator.xml
@@ -22,7 +22,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:text="Расчитайте суточную норму калорий"
+                android:text="@string/titleCalorieCalculation"
                 android:textSize="25sp"
                 android:textColor="@color/blue"
                 android:shadowColor="@color/blueDarkDark"
@@ -42,7 +42,7 @@
                 android:textSize="20sp"
                 android:textColor="@color/white"
                 android:inputType="date"
-                android:hint="Рост в см"
+                android:hint="@string/height_cc"
                 android:textColorHint="@color/greyLight"
                 android:background="@drawable/background_button_water"
                 android:elevation="5dp"/>
@@ -59,7 +59,7 @@
                 android:textSize="20sp"
                 android:textColor="@color/white"
                 android:inputType="date"
-                android:hint="Вес в кг"
+                android:hint="@string/weight_cc"
                 android:textColorHint="@color/greyLight"
                 android:background="@drawable/background_button_water"/>
 
@@ -75,7 +75,7 @@
                 android:textSize="20sp"
                 android:textColor="@color/white"
                 android:inputType="number"
-                android:hint="Возраст"
+                android:hint="@string/age_cc"
                 android:textColorHint="@color/greyLight"
                 android:background="@drawable/background_button_water"
                 android:elevation="5dp"/>
@@ -98,7 +98,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:gravity="center"
-                    android:text="Пол"
+                    android:text="@string/gender_cc"
                     android:textColor="@color/white"
                     android:textSize="23sp" />
 
@@ -114,7 +114,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
-                        android:text="Мужской"
+                        android:text="@string/genderBoy_cc"
                         android:textColor="@color/white"
                         android:textSize="15sp" />
 
@@ -122,7 +122,7 @@
                         android:id="@+id/rbtn_genderGirl_cc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Женский"
+                        android:text="@string/genderGirl_cc"
                         android:textColor="@color/white"
                         android:textSize="15sp" />
                 </RadioGroup>
@@ -148,7 +148,7 @@
                 android:layout_gravity="center"
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
-                android:text="Рассчитать"
+                android:text="@string/calculate_cc"
                 android:textSize="20sp"
                 android:textColor="@color/white"
                 android:textAllCaps="false"
@@ -183,7 +183,7 @@
             android:paddingBottom="5dp"
             android:drawableTop="@drawable/ic_date"
             android:tint="@color/white"
-            android:text="Контроль"
+            android:text="@string/nutritionControl_cc"
             android:textSize="12sp"
             android:textColor="@color/white"
             android:background="@color/blue"
@@ -198,7 +198,7 @@
             android:paddingBottom="5dp"
             android:drawableTop="@drawable/ic_restaurant_menu"
             android:tint="@color/white"
-            android:text="Меню"
+            android:text="@string/foodMenu_cc"
             android:textSize="12sp"
             android:textColor="@color/white"
             android:background="@color/blue"
@@ -212,7 +212,7 @@
             android:paddingBottom="5dp"
             android:drawableTop="@drawable/ic_calc"
             android:tint="@color/white"
-            android:text="Калькулятор"
+            android:text="@string/calculator_cc"
             android:textSize="12sp"
             android:textColor="@color/white"
             android:background="@color/blueDarkDark"
