--- a/Health/app/src/main/res/layout/fragment_profile.xml
+++ b/Health/app/src/main/res/layout/fragment_profile.xml
@@ -43,7 +43,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:gravity="center"
-            android:text="Имя Фамилия"
+            android:text="@string/nameProfile"
             android:textSize="35sp"
             android:textColor="@color/blueDarkDark"/>
 
@@ -77,7 +77,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Рост"
+                    android:text="@string/heightProfile"
                     android:textSize="30sp"
                     android:textColor="@color/blueDarkDark"
                     android:background="@color/blueLight"/>
@@ -87,7 +87,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="0"
+                    android:text="@string/valueHeight"
                     android:textSize="45sp"
                     android:textStyle="bold"
                     android:textColor="@color/blueDarkDark"
@@ -115,7 +115,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Вес"
+                    android:text="@string/weightProfile"
                     android:textSize="30sp"
                     android:textColor="@color/blueDarkDark"
                     android:background="@color/blueLight"/>
@@ -125,7 +125,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="0"
+                    android:text="@string/valueWeight"
                     android:textSize="45sp"
                     android:textStyle="bold"
                     android:textColor="@color/blueDarkDark"
@@ -162,7 +162,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Возраст"
+                    android:text="@string/ageProfile"
                     android:textSize="30sp"
                     android:textColor="@color/blueDarkDark"
                     android:background="@color/blueLight"/>
@@ -172,7 +172,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="0"
+                    android:text="@string/valueAge"
                     android:textSize="45sp"
                     android:textStyle="bold"
                     android:textColor="@color/blueDarkDark"
@@ -200,7 +200,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Пол"
+                    android:text="@string/genderProfile"
                     android:textSize="30sp"
                     android:textColor="@color/blueDarkDark"
                     android:background="@color/blueLight"/>
@@ -210,7 +210,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="М/Ж"
+                    android:text="@string/valueGender"
                     android:textSize="45sp"
                     android:textStyle="bold"
                     android:textColor="@color/blueDarkDark"
