--- a/Health/app/src/main/res/layout/fragment_water.xml
+++ b/Health/app/src/main/res/layout/fragment_water.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="Цель: 0/2000"
+            android:text="@string/goalWater"
             android:textColor="@color/blueMiddle"
             android:textSize="35sp"
             android:gravity="center"/>
@@ -62,7 +62,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
-                android:text="—"
+                android:text="@string/minus"
                 android:theme="@style/Widget.AppCompat.Button"
                 android:textColor="@color/white"
                 android:background="@drawable/background_button_water"
@@ -76,7 +76,7 @@
                 android:layout_weight="1"
                 android:layout_gravity="center"
                 android:inputType="number"
-                android:hint="мл"
+                android:hint="@string/volumeWater"
                 android:textColor="@color/blue"
                 android:textColorHint="@color/purpleHint"
                 android:textSize="25sp"
@@ -94,7 +94,7 @@
                 android:layout_marginBottom="15dp"
                 android:layout_weight="1"
                 android:background="@drawable/background_button_water"
-                android:text="+"
+                android:text="@string/plus"
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 android:textStyle="bold" />
@@ -109,7 +109,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="15dp"
-            android:text="Дата"
+            android:text="@string/dateRecordsWater"
             android:textSize="25sp"
             android:textAllCaps="false"
             android:textColor="@color/white"
@@ -121,7 +121,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:text="Статистика"
+            android:text="@string/statisticsWaterFragment"
             android:textSize="25sp"
             android:textAllCaps="false"
             android:textColor="@color/white"
