--- a/Health/app/src/main/res/layout/fragment_weight.xml
+++ b/Health/app/src/main/res/layout/fragment_weight.xml
@@ -38,7 +38,7 @@
         android:layout_alignBottom="@+id/cg_weight"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="80dp"
-        android:text="123,5"
+        android:text="@string/valueWeightInFragment"
         android:textSize="70sp"
         android:textStyle="bold"
         android:textColor="@color/blue"/>
@@ -50,7 +50,7 @@
         android:layout_alignBottom="@+id/cg_weight"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
-        android:text="кг"
+        android:text="@string/kilograms"
         android:textSize="70sp"
         android:textStyle="bold"
         android:textColor="@color/blue"/>
@@ -62,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:text="Статистика"
+        android:text="@string/statisticsWeightFragment"
         android:textSize="25sp"
         android:textAllCaps="false"
         android:textColor="@color/white"
