--- a/Health/app/src/main/res/layout/item_products.xml
+++ b/Health/app/src/main/res/layout/item_products.xml
@@ -6,7 +6,7 @@
     android:layout_margin="5dp"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
-    android:text="text"
+    android:text="@string/textItemProduct"
     android:textSize="20sp"
     android:textColor="@color/blueDarkDark"
     android:gravity="center" />
