--- a/Health/app/src/main/res/layout/navigation_header.xml
+++ b/Health/app/src/main/res/layout/navigation_header.xml
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Имя Фамилия"
+        android:text="@string/nameInHeader"
         android:textSize="30sp"
         android:textColor="@color/blueDarkDark" />
 
